Exclude colors in pdf

--- a/src/stylesheets/_pdfPage.scss
+++ b/src/stylesheets/_pdfPage.scss
@@ -145,19 +145,19 @@
       }
 
       &.first .quadrant-table__name {
-        color: $sapphire;
+        color: $black;
       }
 
       &.second .quadrant-table__name {
-        color: $turmeric;
+        color: $black;
       }
 
       &.third .quadrant-table__name {
-        color: $jade;
+        color: $black;
       }
 
       &.fourth .quadrant-table__name {
-        color: $flamingo;
+        color: $black;
       }
 
       .blip-list__item {
