Update with Oslo colors

--- a/src/stylesheets/_colors.scss
+++ b/src/stylesheets/_colors.scss
@@ -1,3 +1,11 @@
+$ok-blue-dark: #2a2859;
+$ok-blue-hover: #1f42aa;
+$ok-gray: #f2f2f2;
+$ok-blue: #6fe9ff;
+$ok-green: #43f8b6;
+$ok-yellow: #f9C66b;
+$ok-red: #ff8274;
+
 $green: #86b782;
 $blue: #1ebccd;
 $orange: #f38a3e;
