--- a/src/stylesheets/_herobanner.scss
+++ b/src/stylesheets/_herobanner.scss
@@ -4,7 +4,7 @@
 @if $UIRefresh2022 {
   .hero-banner {
     height: $tabletBannerHeight;
-    background-color: $amethyst;
+    background-color: $ok-blue-dark;
     background-image: url('/images/banner-image-mobile.jpg');
     background-size: contain;
     background-repeat: no-repeat;
