--- a/src/stylesheets/_quadrantsubnav.scss
+++ b/src/stylesheets/_quadrantsubnav.scss
@@ -5,7 +5,7 @@
   .quadrant-subnav {
     font-size: 1.125rem;
     width: 100%;
-    background-color: $mist;
+    background-color: $ok-gray;
     display: flex;
     flex-direction: column;
     height: fit-content;
@@ -42,7 +42,7 @@
         height: 8px;
         display: inline-flex;
         rotate: 45deg;
-        border: 1px solid $flamingo;
+        border: 1px solid $ok-blue-dark;
         border-width: 0 2px 2px 0;
         margin-top: 0;
         margin-bottom: 4px;
@@ -100,19 +100,19 @@
             }
 
             &:nth-child(2) {
-              border-color: $sapphire;
+              border-color: $ok-blue;
             }
 
             &:nth-child(3) {
-              border-color: $turmeric;
+              border-color: $ok-yellow;
             }
 
             &:nth-child(4) {
-              border-color: $jade;
+              border-color: $ok-green;
             }
 
             &:nth-child(5) {
-              border-color: $flamingo;
+              border-color: $ok-red;
             }
           }
         }
@@ -122,7 +122,7 @@
           border: none;
           font: inherit;
           cursor: pointer;
-          background-color: $mist;
+          background-color: $ok-gray;
 
           @include media-query-xlarge {
             padding: 15px 40px;
@@ -153,12 +153,12 @@
           border: none;
 
           &:not(.active-item):hover {
-            color: $flamingo-s40;
+            color: $ok-blue-hover;
             text-decoration: underline;
             text-underline-offset: 6px;
 
             & > * {
-              color: $flamingo-s40;
+              color: $ok-blue-hover;
             }
           }
         }
