--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -19,13 +19,15 @@
 @import 'screen';
 @import 'pdfPage';
 
+
+
 :root {
-  font-family: 'Inter', sans-serif;
+  font-family: $baseFontFamily;
 }
 
 @supports (font-variation-settings: normal) {
   :root {
-    font-family: 'Inter var', sans-serif;
+    font-family: $baseFontFamily;
   }
 }
 
@@ -33,13 +35,14 @@
   body {
     font: 18px 'Open Sans';
     opacity: 0;
+
     @if $UIRefresh2022 {
       font-family: $baseFontFamily;
       opacity: 1;
 
       h1 {
         font-size: 1.5rem;
-        font-family: 'Bitter', serif;
+        font-family: $baseFontFamily;
         text-transform: none;
         letter-spacing: normal;
 
