--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -20,12 +20,12 @@
 @import 'pdfPage';
 
 :root {
-  font-family: 'Inter', sans-serif;
+  font-family: $baseFontFamily;
 }
 
 @supports (font-variation-settings: normal) {
   :root {
-    font-family: 'Inter var', sans-serif;
+    font-family: $baseFontFamily;
   }
 }
 
@@ -39,7 +39,7 @@
 
       h1 {
         font-size: 1.5rem;
-        font-family: 'Bitter', serif;
+        font-family: $baseFontFamily;
         text-transform: none;
         letter-spacing: normal;
 
